welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {
  if (!noDouble){return die1 + die2}
  else if (die1==die2){return die1*2+1}
  
}